# rs-graph

./: .cookiecutter.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  Dockerfile  Dockerfile.softcite  Justfile  README.md  alembic.ini  all-model-results.csv  annotated-softcite-2025.csv  biosciences-repo-set-inference.ipynb  doc-repo-classifier.py  eda.ipynb  eval-all-models.py  example-em-modeling-training.ipynb  example-pipeline.ipynb  grobid-config.yaml  index.html  inspect-dev-author-matches.ipynb  lazy-predict.ipynb  match_author_devs.ipynb  output.ipynb  plot.ipynb  pyproject.toml  qss-code-authors.html  rapidfuzz-example.py  repo-paper-em-classifier.ipynb  requirements-dev.txt  robots.txt  search.json  sitemap.xml  snowball-sampling-predicted-article-repo-pairs.csv  softcite-2025-analysis.ipynb  temp-mentions-client-config.json  tree-experiment.ipynb  viz.html  (+1 more)
.github/workflows/: ci.yml  docs.yml  processing.yml
extra-notebooks/: cc-na-analysis.html  cc-na-anno.html
migrations/: env.py  script.py.mako
migrations/versions/: 03e33a280ea1_git_commit_7aa6d3f.py  072d95284eb6_git_commit_8811311.py  0cd69b807caa_git_commit_e406f20.py  11f56eefa529_git_commit_2c6b721.py  1c3dfd17c192_git_commit_e361791.py  1ea1dd59d404_git_commit_e27fadd.py  1f5c1c66e195_git_commit_1fef8b7.py  2060edab0e05_git_commit_bc23395.py  208e15f25708_git_commit_1742816.py  21c06d9d16b5_git_commit_a93700b.py  24be0001da07_git_commit_dad3435.py  24f001115942_git_commit_0b6891c.py  2633e71f2f2d_git_commit_db29333.py  2c5b06dbc64a_git_commit_e9fcfc6.py  3ec67be36c53_git_commit_eb34703.py  43a8e5b6178c_git_commit_eeba738.py  478778943877_git_commit_f6de62c.py  58d64881d7ae_git_commit_6ba752a.py  5b0e7d54c826_git_commit_99e2c1c.py  6736b5a3b444_git_commit_1b655a9.py  6887d527e542_git_commit_01195ee.py  87bede6ebf30_git_commit_a7b20ac.py  88210908838f_git_commit_3dfc1a7.py  8dd9d11b82c0_git_commit_98e2aaf.py  92de9f98a387_git_commit_dc1f275.py  950645d6e13d_git_commit_964545f.py  963c8b13b478_git_commit_41f90fc.py  99c3b2fbe37e_git_commit_d29900f.py  9c54431370e9_git_commit_cdc1706.py  a04dfe729866_git_commit_79a9ba5.py  a3aca6a0fb2e_git_commit_1fbabd6.py  ab828f670345_git_commit_fd859d5_message_maybe_git_.py  b780d4f88bcd_git_commit_0f70e0e.py  c537c6ea14e9_git_commit_f5f94fd.py  cffbc81efb22_git_commit_025d45c.py  d31bf8075143_git_commit_6c6a9fb.py  d959de97d427_git_commit_1b149b9.py  e87d08726abb_git_commit_1a533c2.py  e983215be6be_git_commit_92effd9.py  ed27db582ea8_git_commit_1910ba8.py  (+6 more)
notebooks/: annotated-random-sample-prelinked-sources.csv  annotation-from-random-prelinks.ipynb  author-developer-annotated-pairs-resolved.csv  author-developer-pairs-evaluation-after-annotation.ipynb  author-developer-pairs-for-annotation.ipynb  author_developer_pairs_for_annotation_seed_12_n_pairs_10.csv  characterizing-sci-source-code-repositories.ipynb  discovery-pipeline-estimation.ipynb  doc-repo-classifier.py  eda.ipynb  example-used-software-comparison.py  icssi.ipynb  joss-authorship-credit.ipynb  lazy-predict.ipynb  package-package-with-attrs.pajek  package-package-without-attrs.pajek  rq1-analysis.ipynb  snowball-sampling-discovery-prep.ipynb  snowball-sampling-growth.ipynb  softcite-2025-analysis.ipynb  tree-experiment.ipynb  usrssi-data-pull.ipynb  viz.ipynb
notebooks/author-developer-discovery-estimates/: 1 year.parquet  180 days.parquet  2 years.parquet  3 years.parquet  4 years.parquet  5 years.parquet
publications/: .gitignore  cc-na-analysis.ipynb  cc-na-anno.ipynb  cc-na-eva.csv  cc-na-individuals-full.csv  cc-na-individuals-sample.csv  distributions.ipynb  icssi-code-authors.ipynb  icssi.ipynb  qss-code-contribution-confidence-thresholding.ipynb
publications/qss-code-authors/: .gitignore  _quarto.yml  arxiv-ready-qss-code-authors.tex  main.bib  qss-code-authors.ipynb  qss-code-authors.qmd  qss-code-authors.quarto_ipynb  temp.ipynb
publications/qss-code-authors/_extensions/mikemahoney218/arxiv/: arxiv.sty
publications/qss-code-authors/extra-data/: author_developer_pairs_for_annotation_seed_12_n_pairs_20.csv  cc-na-initial-set.csv  cc-na-initial-unresolved-set.csv  cc-na-nic.csv
publications/qss-code-authors/extra-notebooks/: annotation-from-random-prelinks.ipynb  author-developer-pairs-evaluation-after-annotation.ipynb  cc-na-analysis.ipynb  cc-na-anno.ipynb
rs_graph/: __init__.py  distributed_utils.py  pipeline_config.py  types.py
rs_graph/data/: __init__.py  github.py  joss.py  npmjs.py  pypi.py  schema.py  semantic_scholar.py  softwarex.py
rs_graph/data/database/: constants.py  models.py  utils.py
rs_graph/data/enrichment/: __init__.py  github.py  semantic_scholar.py
rs_graph/data/files/: joss-2023-10-02.parquet  joss-one-hot-deps-2023-10-02.parquet  rs-graph-upstream-deps-2023-10-03.parquet  softwarex-2023-10-03.parquet
rs_graph/data/registries/: __init__.py  cargo.py  pypi.py
rs_graph/data/sources/: __init__.py  joss.py  softwarex.py
rs_graph/db/: constants.py  models.py  utils.py
rs_graph/enrichment/: article.py  entity_matching.py  github.py  grant_prediction.py  grobid_soft_cite.py  open_alex.py  semantic_scholar.py  source_code.py  web_of_science.py
rs_graph/enrichment/support/: grobid-soft-cite-config.json
rs_graph/ml/: __init__.py  dev_author_em_clf.py  train_and_eval_all_dev_author_em_clf.py
rs_graph/modeling/: __init__.py  dev_author_em_clf.py  train_and_eval_all_dev_author_em_clf.py
rs_graph/sources/: __init__.py  joss.py  nsf.py  plos.py  proto.py  pwc.py  softcite_2025.py  softwarex.py
rs_graph/sources/softcite-2025-files/: softcite-2025-annotated.csv  softcite-2025-annotation-ready.csv  softcite-2025-initial-sample-for-agreement.csv  softcite-2025-mini-classifier.skops
rs_graph/utils/: __init__.py  code_host_parsing.py  dask_functions.py  dt_and_td.py
rs_graph/utils.py/: __init__.py
site_libs/bootstrap/: bootstrap-2d5effa1089c490eac5c05282fa1a5ea.min.css  bootstrap-6aa1ed12ae2bfc1734a8721db46d9a24.min.css
softwarex/: forked_repos-origins.csv  imp2.py
