# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "rs-graph"
description = "Exploring research software"
keywords = []
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
  { email = "evamaxfieldbrown@gmail.com", name = "Eva Maxfield Brown" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
  # general
  "dataclasses-json>=0.6,<0.7",
  "gcsfs>=2023.10.0",
  "pandas>=1,<3",
  "pyarrow>=12,<16",
  "python-dotenv>=1,<2",
  "tqdm>=4,<5",
  "typer>=0.9.0,<0.10",
  # processing
  "backoff>=2,<3",
  "ghapi>=1,<2",
  "parse>=1,<2",
  "requests>=2,<3",
  "semanticscholar>=0.7,<0.8",
  "sentencepiece>=0.1,<0.2",
  "sentence-transformers>=2,<3",
  # database
  "alembic[tz]>=1,<2",
  "sqlmodel>=0.0.16,<0.0.17",
  # viz
  "altair>=5,<6",
  "bokeh>=3,<4",
  "matplotlib>=3,<4",
  "networkx>=3,<4",
  "opinionated>=0.0.2,<0.0.3",
  "scipy>=1,<2",
  "umap-learn[plot]>=0.5.4,<0.6",
  # statistics and ml
  "autotrain-advanced>=0.7,<0.8",
  "datasets>=2,<3",
  "scikit-learn>=1,<2",
  "skops==0.9.0",
  "statsmodels>=0.14,<0.15",
]

[project.urls]
Homepage = "https://github.com/evamaxfield/rs-graph"
"Bug Tracker" = "https://github.com/evamaxfield/rs-graph/issues"
Documentation = "https://evamaxfield.github.io/rs-graph"
"User Support" = "https://github.com/evamaxfield/rs-graph/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "pre-commit>=2.20.0",
]
dev = [
  "ipython",
  "jupyterlab",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
rs-graph-data = "rs_graph.bin.data:main"
rs-graph-sources = "rs_graph.bin.sources:main"
rs-graph-enrichment = "rs_graph.bin.enrichment:main"
rs-graph-modeling = "rs_graph.bin.modeling:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "py.typed"]

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.per-file-ignores]
"**/notebooks/*" = ["E501"]
"**/tests/*.py" = ["D"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true