# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "rs-graph"
description = "Exploring research software"
keywords = []
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MPLv2 License" }
authors = [
  { email = "evamaxfieldbrown@gmail.com", name = "Eva Maxfield Brown" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
  "sqlmodel>=0.0.31,<0.1",
]

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "prek>=0.2.29",
  "ty>=0.0.12",
]
dev = [
  "ipython",
  "jupyterlab",
  "alembic[tz]>=1,<2",
]
modeling = [
  "ipython",
  "connectorx>=0.4",
  "lxml>=5,<6",
  "matplotlib>=3.8.4",  # pinned for compatibility with colormaps
  "numpy>=1,<3",
  "opinionated>=0.0.3,<0.0.4",
  "pandas>=1,<3",
  "pyarrow>=12",
  "rustworkx>=0.17",
  "scipy>=1,<2",
  "sci-soft-models @ file:///Users/evamaxfield/active/research/sci-soft-models",
  "seaborn>=0.13,<0.14",
  "skops>=0.11,<0.12",
  "statsmodels>=0.14,<0.15",
]
data = [
  "dataclasses-json>=0.6,<0.7",
  "dvuploader>=0.3,<0.4",
  "easyDataverse>=0.4,<0.5",
  "python-dotenv>=1,<2",
  "tqdm>=4,<5",
  "typer>=0.15",
]
pipeline = [
  "allofplos>=1,<2",
  "backoff>=2,<3",
  "bokeh>=3,<4",
  "cachetools>=5,<7",
  "coiled>=1,<2",
  "dataclasses-json>=0.6,<0.7",
  "gcsfs>=2023.10.0",
  "ghapi>=1,<2",
  "gh-tokens-loader>=0.1,<0.2",
  "msgspec>=0.18,<0.21",
  "numpy>=1,<3",
  "parse>=1,<2",
  "pandas>=1,<3",
  "polars>=1,<2",
  "prefect>=3,<4",
  "pyalex>=0.14,<0.15",
  "pyarrow>=12",
  "pybliometrics>=4.2,<5",
  "python-dotenv>=1,<2",
  "pyyaml>=6,<7",
  "requests>=2,<3",
  "sci-soft-models @ file:///Users/evamaxfield/active/research/sci-soft-models",
  "tqdm>=4,<5",
  "typer>=0.15",
]

[project.urls]
Homepage = "https://github.com/evamaxfield/rs-graph"
"Bug Tracker" = "https://github.com/evamaxfield/rs-graph/issues"
Documentation = "https://evamaxfield.github.io/rs-graph"
"User Support" = "https://github.com/evamaxfield/rs-graph/issues"

# entry points
# example
# rs-graph-prelinked-dataset-ingestion = "rs_graph.bin.prelinked_dataset_ingestion:main"
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
rs-graph-data = "rs_graph.bin.data:main"
rs-graph-prelinked-dataset-ingestion = "rs_graph.bin.prelinked_dataset_ingestion:main"
rs-graph-snowball-sampling-discovery = "rs_graph.bin.snowball_sampling_discovery:main"
rs-graph-alternate-doi-discovery = "rs_graph.bin.alternate_doi_discovery:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# tools
# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 96
target-version = "py312"
lint.extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
lint.extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.per-file-ignores]
"**/notebooks/*" = ["E501", "B018"]
"**/publications/*" = ["E501", "B018"]
"**/tests/*.py" = ["D"]
"**/migrations/*.py" = ["D"]

[tool.ty.src]
exclude = [".github", ".pre-commit-config.yaml", "pyproject.toml", "migrations/"]